Made changes suggested on about page

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <body>
 
         <header class="header">
-            <div class="topHeader desktop-only" id="topHeader">
+            <nav class="topHeader desktop-only" id="topHeader">
                 <img
                 class="topHeader-icon"
                 src="images/icons/facebook.png"
@@ -31,10 +31,7 @@
                     <li class="topHeader-button">My page</li>
                     <li class="topHeader-button">Logout</li>
                 </ul>
-                <!-- <button class="topHeader-button">English</button>
-                <button class="topHeader-button">My page</button>
-                <button class="topHeader-button">Logout</button> -->
-            </div>
+            </nav>
 
             <nav class="navbar desktop-only">
                 <!--*----------------- logo --------------------->
@@ -53,9 +50,9 @@
                 <ul class="nav-menu-list">
                     <li class="nav-menu">
                         <a
-                        href="./about.html"
+                        href="./index.html"
                         class="nav-menu-item"
-                        >About</a
+                        >Home</a
                         >
                     </li>
                     <li class="nav-menu">
@@ -103,7 +100,7 @@
 
             <!-- mobile menu -->
 
-            <section class="mobile-menu mobile-only" id="mobile-menu">
+            <nav class="mobile-menu mobile-only" id="mobile-menu">
                 <!--* close_button -->
                 <img class="close-btn" src="images/close-button.png"alt="close button"/>
                 <ul class="menu-list">
@@ -150,7 +147,7 @@
                     >
                     </li>
                 </ul>
-            </section>
+            </nav>
             
         </header>
 
@@ -173,7 +170,7 @@
 
             <div class="page2-wrap">
                 <div class="page2">
-                    <h2 class="page2-title">Microsoft Global </br>
+                    <h2 class="page2-title">Microsoft Global 
                     Summit 2022 Logo</h2>
                     <hr />
                     <div class="main-program-container">
@@ -182,7 +179,7 @@
                                 <p class="main-program-words">The logo of the MS Global Summit was decided</br>
                                 through the logo competition from 8th to 9th June 2020</p>
                                 <div class="logo-box">
-                                    <img class="ms-logo" src="images/microsoft.jpg" alt=""/>
+                                    <img class="ms-logo" src="images/microsoft.jpg" alt="microsoft logo"/>
                                 </div>
                             </div>
                         </div>
@@ -220,27 +217,28 @@
             <hr />
             <div class="partner-images">
                 <div class="img-row-1">
-                    <img class="partner-img" src="images/logos/mozilla.png" alt="" />
-                    <img class="partner-img" src="images/logos/naver.png" alt="" />
-                    <img class="partner-img" src="images/logos/lumen.png" alt="" />
+                    <img class="partner-img" src="images/logos/mozilla.png" alt="mozilla" />
+                    <img class="partner-img" src="images/logos/naver.png" alt="naver" />
+                    <img class="partner-img" src="images/logos/lumen.png" alt="lumen" />
                 </div>
                 <div class="img-row-1">
-                    <img class="partner-img" src="images/logos/airbnb.png" alt="" />
-                    <img class="partner-img" src="images/logos/line-friends.png" alt="" />
+                    <img class="partner-img" src="images/logos/airbnb.png" alt="airbnb" />
+                    <img class="partner-img" src="images/logos/line-friends.png" alt="line-friends" />
                 </div>
             </div>
         </section>
 
         <footer>
-            <div class="commons-logo">
-                <img class="commons-img" src="" alt="">
-                <h3 class="commons-word">creative</br>
-                    commons kla
-                </h3>
-            </div>
-            <div class="commons-right">
-                <p>2023 Creative Commons Kla</br>
-                    Some Rights Reserved</p>
+            <div class="footer-icons">
+                <div class="commons-logo">
+                    <h3 class="commons-word">creative</br>
+                        commons kla
+                    </h3>
+                </div>
+                <div class="commons-right">
+                    <p>2023 Creative Commons Kla</br>
+                        Some Rights Reserved</p>
+                </div>
             </div>
         </footer>
     </body>
